# extensions

./: .gitignore  LICENSE  README.md  pyproject.toml
webifier_extensions/: _resources.py  registry.py
webifier_extensions/analytics/google/: extension.py
webifier_extensions/chapters/: extension.py  renderer.py
webifier_extensions/comments/: extension.py  renderer.py
webifier_extensions/markdown/: extension.py  renderer.py
webifier_extensions/notebook/: converter.py  extension.py
webifier_extensions/pdf/: extension.py
webifier_extensions/people/: extension.py  renderer.py
webifier_extensions/people/templates/: people.html
webifier_extensions/resume/: experience.html  extension.py  publications.html  renderer.py
webifier_extensions/resume/assets/css/: resume.css
webifier_extensions/search/: extension.py
webifier_extensions/standard/: content_page.py  extension.py  freeform.py  links.py  page.py  section.py
webifier_extensions/standard/assets/css/: main.css
webifier_extensions/standard/templates/: content.html  page.html  section.html
webifier_extensions/standard/templates/macros/: chapters.html  comments.html  footer.html  head.html  header.html  link.html  links.html  meta.html  nav.html  page_navigation.html  people.html  person.html
webifier_extensions/theme/: extension.py
webifier_extensions/theme/assets/css/: theme.css
